force-app/main/default/objects/Skills__c/Skills__c.object-meta.xml
<CustomObject>
    <label>Skills</label>
    <nameField>
        <label>Skills Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skiils</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>