force-app/main/default/objects/Skills__c/fields/Next_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Reminder_Date__c</fullName>
    <label>Next Reminder Date</label>
    <type>Date</type>
</CustomField>