force-app/main/default/objects/Skills__c/fields/Reason_To_Learn__c.field-meta.xml
<CustomField>
    <fullName>Reason_To_Learn__c</fullName>
    <label>Reason To Learn</label>
    <type>TextArea</type>
</CustomField>