force-app/main/default/objects/Skills__c/fields/Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email__c</fullName>
    <label>Reminder Email</label>
    <type>Email</type>
</CustomField>