force-app/main/default/objects/Skills__c/fields/Reminder_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Frequency__c</fullName>
    <label>Reminder Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>