force-app/main/default/objects/Skills__c/fields/Reminder_Needed__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Reminder Needed?</label>
    <type>Checkbox</type>
</CustomField>