force-app/main/default/objects/Skills__c/fields/Skill_Type__c.field-meta.xml
<CustomField>
    <fullName>Skill_Type__c</fullName>
    <label>Skill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learned</fullName>
            </value>
            <value>
                <fullName>To Learn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>